--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="title">Title</string>
     <string name="description">Description here</string>
     <string name="save">Save</string>
+    
+    <string name="msg_insert_success">Successfully added a note</string>
+    <string name="msg_insert_failed">Failed to add note</string>
+    <string name="msg_discard_save">Do you want to save the note?</string>
+
+    <string name="action_yes">Yes</string>
+    <string name="action_no">No</string>
 </resources>
